[package]
name = "yuzhe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
walkdir = "2.3"
lru = "0.12"
